# DriftDetect

./: .gitignore  PROPOSAL.md  PROPOSAL_ADDENDUM.md  README.md  pyproject.toml  requirements.txt  setup.cfg  slow_mode_anchored_dynamics.md
configs/: a_bb_sp_dpr_cartpole.yaml  a_bb_sp_dpr_cheetah.yaml  a_bb_sp_dpr_walker.yaml  a_sp_dpr_cartpole.yaml  a_sp_dpr_cheetah.yaml  a_sp_dpr_walker.yaml  ac1_cheetah.yaml  ac2_lite_cheetah.yaml  ac_cheetah_diag.yaml  adaptive_smad_v1.yaml  cartpole_500k.yaml  env-analysis.yaml  env-dreamerv3.yaml  env-dreamerv4.yaml  jacobian_reg_cheetah.yaml  month8_anchor_only.yaml  month8_bias_loss.yaml  month8_correction.yaml  month8_correction_disabled.yaml  month8_drift_head.yaml  month8_moment_match.yaml  month8_moment_match_cartpole.yaml  month8_moment_match_v2.yaml  month8_moment_match_walker.yaml  month8_multi_horizon.yaml  month8_true_bias_loss.yaml  sharp_v2_B0_diagnostic.yaml  sharp_v2_runA_cartpole.yaml  sharp_v2_runA_cheetah.yaml  sharp_v2_runB_cartpole.yaml  sharp_v2_runB_cheetah.yaml  sharp_v2_runC1_cheetah.yaml  sharp_v2_runC2_cheetah.yaml  sharp_v2_runC2a_cheetah.yaml  sharp_v2_runC3_cheetah.yaml  sharp_v2_runC_cheetah.yaml  sharp_v3_cartpole_multiseed.yaml  sharp_v3_cheetah_multiseed.yaml  sharp_v3_walker_multiseed.yaml  smad_phase2_baseline.yaml  (+3 more)
docs/: adaptive_smad_design.md  architecture.md  b1_smad_staleness_check.md  b1_verdict_and_month7_plan.md  cartpole_dynamics_decision.md  cartpole_mismatch_check.md  external_repos.md  filter_ablation.md  final_target_decision.md  finding_b_evidence.md  finding_d_evidence.md  setup.md  (+47 more)
(+177 files in other folders)
